# decent_social_solana

./: README.md
.github /workflows/: rust.yml
.github/workflows/: build_front_end.yml  build_program.yml  cargo_clippy_program.yml  integration_tests.yml  main.yml  program_unit_tests.yml
front_end/: Cargo.toml
front_end/src/: client.rs  lib.rs  main.rs  utils.rs
front_end/src/integration_tests/: user_profile_tests.rs
program/: Cargo.toml
program/program_deploy_backup/deploy/: decent_social-keypair.json
program/src/: instruction.rs  lib.rs
