[package]
name = "program"
version = "0.1.0"
edition = "2018"

[features]
# https://docs.solana.com/developing/on-chain-programs/developing-rust#project-layout
#
# When toggled on this feature will cause the crate to not compile a
# bpf entrypoint.
#
# See the corresponding `#[cfg(not(feature = "exclude_entrypoint"))]`
# in lib.rs. This is needed so that other Solana programs can import
# helper functions from this library without causing symbol conflicts
# with our entrypoint.
exclude_entrypoint = []

[dependencies]
borsh = "0.9.1"
mspl = { path = "../../my_solana_program_library" }
# mspl = { git = "https://github.com/simsekgokhan/my_solana_program_library", branch = "main" }
solana-program = "1.13.6"

[lib]
name = "decent_social"
crate-type = ["cdylib", "lib"]